--- a/Project.toml
+++ b/Project.toml
@@ -1,5 +1,15 @@
+name = "PolicyNLPModels"
+uuid = "015af790-0843-43cc-b074-5d903430cca6"
+authors = ["Sungho Shin"]
+repo = "https://github.com/sshin23/PolicyNLPModels.jl.git"
+version = "0.1.0"
+
 [deps]
-CUDA = "052768ef-5323-5732-b1bb-66c8b64840ba"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+MadNLP = "2621e9c9-9eb4-46b1-8089-e8c72242dfb6"
+NLPModels = "a4795742-8479-5a88-8948-cc11e1c8c1a6"
+Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
+ReverseDiff = "37e2e3b7-166d-5795-8a7a-e32c996b4267"
+Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
