--- a/Project.toml
+++ b/Project.toml
@@ -1,9 +1,3 @@
-name = "PolicyNLPModels"
-uuid = "015af790-0843-43cc-b074-5d903430cca6"
-authors = ["Sungho Shin"]
-repo = "https://github.com/sshin23/PolicyNLPModels.jl.git"
-version = "0.1.0"
-
 [deps]
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 Ipopt = "b6b21f68-93f8-5de0-b562-5493be1d77c9"
@@ -12,6 +6,7 @@ LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 MadNLP = "2621e9c9-9eb4-46b1-8089-e8c72242dfb6"
 MadNLPHSL = "7fb6135f-58fe-4112-84ca-653cf5be0c77"
+MatrixEquations = "99c1a7ee-ab34-5fd5-8076-27c950a045f4"
 NLPModels = "a4795742-8479-5a88-8948-cc11e1c8c1a6"
 NLPModelsJuMP = "792afdf1-32c1-5681-94e0-d7bf7a5df49e"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
